--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <!-- https://dribbble.com/shots/5993849-Mortgage-Calculator/attachments -->
+    <!-- https://dribbble.com/shots/5993849-Mortgage-Calculator/attachments -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bin2Dec</title>
@@ -17,7 +17,7 @@
     <!-- CSS Link -->
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,100;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -34,17 +34,12 @@
           to see its decimal equivalent
         </h5>
       </div>
-      <div class="row">
-        <div class="col-lg-6">
-            <div class="calculator">
-                <input type="number" class="bin-input" />
-                <span id="error-msg"></span>
-                <button class="cal-btn">calculate</button>
-            </div>
-        </div>
-        <div class="col-lg-6">
-          <div id="outcome"></div>
-        </div>
+
+      <div class="calculator">
+        <input type="number" class="bin-input" />
+        <span id="error-msg"></span>
+        <button class="cal-btn">calculate</button>
+        <div id="outcome"></div>
       </div>
     </div>
 
